--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "svelte-media": "0.0.3",
     "svelte-preprocess": "^3.2.0-alpha.2",
     "tailwindcss": "^1.1.3",
-    "tailwindcss-bg-alpha": "^2.1.0"
+    "tailwindcss-bg-alpha": "^2.1.0",
+    "tailwindcss-dark-mode": "^1.1.3"
   },
   "dependencies": {
     "autoprefixer": "^9.7.4",
